# cc6205-assignments

./: README.md  pyproject.toml
models/: tarea4.pth
src/cc6205_assignments/: __init__.py  tarea1.ipynb  tarea2.ipynb  tarea3.ipynb  tarea4.ipynb  tarea5.ipynb
